# localbooru

./: AGENTS.md  MANIFEST.in  README.md  clip.py  clip_search.py  config.py  database.py  pyproject.toml  server.py  tags.py  webview_app.py
docs/: RATING.md  ui_rebuild_requirements.md
frontend/: index.html
scripts/: setup_venv.sh
src/localbooru/: __init__.py  auto_tagging.py  cli.py  clip.py  clip_search.py  config.py  database.py  enhanced_metadata.py  ingestion.py  metadata.py  scanner.py  search.py  server.py  tags.py  watchers.py  webview_app.py
src/localbooru/frontend/: app.css  app.js  clip_state.js  detail.html  detail.js  index.html
tests/: test_config.py  test_database.py  test_ingestion_auto_tags.py  test_search.py  test_server_metadata.py  test_tags.py
